fixed posts so that they'd overflow correctly, made sure network info showed up in dashboard

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -740,6 +740,7 @@ ul.network
 {
 	float:left;
 	margin-left:20px;
+	max-width:425px;
 }
 
 p.network
